# Py_WEB_11

./: README.en.md  README.md  env_example  main.py  pyproject.toml
src/: alembic.ini  main.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 105f6acc3a3e_added_new_fields.py  fece42ba3db3_init.py
src/db/: database.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/static/: styles.css
src/templates/: index.html
