[tool.poetry]
name = "py-web-11"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
